# sp-aie-sergiomb04-project

./: .gitignore  AGENTS.md  CONTEXT.md  README.es.md  README.md  application.html  company-choice.md  index.html  validation.js
.agents/rules/: no-business-logic-duplication.md
.agents/skills/feature-validation/: SKILL.md
.current_task/: CONTEXT-trackflow.es.md  TASK.md
apps/talent-pipeline-tracker/: TASK.md
docs/: ARCHITECTURE_PROPOSAL.md
memory-bank/: progress.md  projectbrief.md  techContext.md
scripts/incidents-analysis/: README.md  analyze.py  incidents-analysis-results.csv  incidents-trackflow.csv
services/api/: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
services/api/incidents_api/: app.py  main.py  seed.py  store.py
services/api/incidents_api/routes/: suppliers.py
services/api/tests/: test_auth_flow.py
services/api/trackflow_api/: __init__.py  app.py  auth.py  create_admin.py  create_user.py  database.py  main.py  models.py  password_reset.py  repositories.py  seed.py
services/api/trackflow_api/routes/: auth.py  profiles.py  suppliers.py  users.py
shared/: README.es.md  README.md
src/: demo.js  demo.ts
src/types/: models.ts
src/utils/: collections.js  collections.ts  search.js  search.ts  transformations.js  transformations.ts  validations.js  validations.ts
uis/: README.es.md  README.md
uis/backoffice/: next.config.ts  package-lock.json
uis/backoffice/app/: layout.tsx  (+1 more)
uis/talent-pipeline-tracker/: README.md  package-lock.json
uis/website/: package-lock.json
workflows/: README.es.md
(+111 files in other folders)
